ui fixes for cards alignment

--- a/packages/nulp_elite/src/styles/style.css
+++ b/packages/nulp_elite/src/styles/style.css
@@ -55,11 +55,11 @@ button {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   width: 96%;
   text-align: left;
-  height: 67px;
+  height: 45px;
 }
 .oneLineEllipsis {
   z-index: 9999;
@@ -136,6 +136,20 @@ button {
   overflow: hidden !important;
 }
 @media (min-width: 320px) {
+  .custom-card {
+    margin-bottom: 31px !important;
+    display: flex;
+    justify-content: space-between;
+    gap: 25px;
+    flex-wrap: wrap;
+  }
+  .custom-card-box {
+    width: 166px;
+  }
+
+  .allContent.MuiContainer-root {
+    max-width: 100% !important;
+  }
   .Menuactive .profile-text-circle {
     background: #fff;
     color: #0e7a9c;
@@ -155,6 +169,10 @@ button {
   .cardBox {
     box-shadow: 0px 4px 4px 0px #00000040 !important;
     border-radius: 10px !important;
+    /* width: 234px; */
+  }
+  .cardBox .MuiCardContent-root {
+    padding-bottom: 0 !important;
   }
   .pt-1 {
     padding-top: 1px !important;
@@ -446,7 +464,7 @@ button {
     bottom: -6px;
   }
   .allContentList .cardTitle {
-    height: 65px;
+    height: 45px;
   }
 
   /* .react-multi-carousel-item {
@@ -594,6 +612,23 @@ button {
   }
 }
 @media (min-width: 769px) {
+  .headerMenu {
+    color: rgb(72, 72, 72);
+    display: flex;
+    margin: 0px 20px;
+    padding: 10px;
+  }
+  .custom-card {
+    justify-content: space-between;
+    gap: 30px 20px;
+  }
+  .blankCard {
+    flex-grow: 1;
+  }
+  .allContent.MuiContainer-root {
+    padding-right: 45px;
+    padding-left: 45px;
+  }
   .lg-w-140 {
     width: 140px;
   }
@@ -617,6 +652,9 @@ button {
   .lg-pl-18 {
     padding-left: 18px;
   }
+  .lg-pl-12 {
+    padding-left: 12px !important;
+  }
 
   /* .left-container ul {
     padding: 0 !important;
@@ -633,9 +671,10 @@ button {
   }
   .allContent .cardBox {
     flex: 1;
+    height: 300px;
   }
   .allContent .MuiGrid-grid-lg-2 {
-    height: 352px;
+    height: 319px;
   }
   .allContentProfile .MuiGrid-item {
     height: 335px !important;
@@ -653,7 +692,7 @@ button {
     bottom: 173px;
   }
   .card-img-container {
-    top: 83px;
+    top: 73px;
   }
   .card-media {
     height: 128px;
@@ -701,12 +740,12 @@ button {
   .react-multi-carousel-list.carousel-container .MuiGrid-container {
     margin-left: -2px !important;
   }
-  .allContent .MuiGrid-grid-lg-2 {
+  /* .allContent .MuiGrid-grid-lg-2 {
     flex-basis: 240px !important;
     flex-grow: 0;
     max-width: 240px !important;
     margin-right: 0;
-  }
+  } */
   .react-multi-carousel-list {
     display: block !important;
   }
@@ -726,6 +765,14 @@ button {
   }
 }
 @media (min-width: 769px) {
+  .allContent .left-container {
+    margin-left: 16px;
+    max-width: 315px !important;
+    margin-right: 18px;
+  }
+  .custom-card-box {
+    width: 236px;
+  }
   .lg-mt-10 {
     margin-top: 10px !important;
   }
@@ -1101,7 +1148,7 @@ Footer {
   margin-top: 20px !important;
 }
 .mt-35 {
-  margin-top: 35px !important;
+  margin-top: 18px !important;
 }
 .addConnection .jss3 {
   background-color: transparent !important;
@@ -1142,7 +1189,7 @@ button {
   justify-content: flex-end;
 }
 .jc-bw {
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 .alignItems-center {
   align-items: center;
@@ -1674,6 +1721,7 @@ custom-chip {
   /* flex: 1; */
   display: flex;
   flex-direction: column;
+  /* padding: 0 8px !important; */
 }
 
 .jss1.jss3.MuiTabs-indicator {
